WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267614
Fix "supress" typos
https://bugs.webkit.org/show_bug.cgi?id=267614
Summary
Fix "supress" typos
Tim Nguyen (:ntim)
Reported
2024-01-16 16:58:48 PST
Except in ThirdParty code:
https://searchfox.org/wubkat/search?q=supress&path=&case=false®exp=false
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-23 16:59:14 PST
<
rdar://problem/121478921
>
zak ridouh
Comment 2
2024-06-24 17:47:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30129
EWS
Comment 3
2024-07-03 20:08:22 PDT
Committed
280653@main
(a9199700fb69): <
https://commits.webkit.org/280653@main
> Reviewed commits have been landed. Closing PR #30129 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug