Fix "supress" typos https://bugs.webkit.org/show_bug.cgi?id=267614 rdar://121478921

Reviewed by Tim Nguyen.

Correct misspellings ("supress") with proper spelling ("suppress") across codebase.

* LayoutTests/dom/html/level2/html/HTMLTableCellElement21.js:
* LayoutTests/dom/html/level2/html/HTMLTableCellElement22.js:
* LayoutTests/dom/xhtml/level2/html/HTMLTableCellElement21.js:
* LayoutTests/dom/xhtml/level2/html/HTMLTableCellElement22.js:
* LayoutTests/fast/events/popup-blocking-click-in-iframe-expected.txt:
* LayoutTests/fast/events/popup-blocking-click-in-iframe.html:
* LayoutTests/fast/xsl/mozilla-tests.xsl:
* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.mm:
* Source/WebCore/PAL/pal/spi/cocoa/AVFoundationSPI.h:
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::isTouchBarUpdateSuppressedForHiddenContentEditable const):
(WebCore::Quirks::isTouchBarUpdateSupressedForHiddenContentEditable const): Deleted.
* Source/WebCore/page/Quirks.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setMuted):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setIsTouchBarUpdateSuppressedForHiddenContentEditable):
(WebKit::WebPageProxy::setIsTouchBarUpdateSupressedForHiddenContentEditable): Deleted.
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::updateTouchBar):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didStartPageTransition):
(WebKit::WebPage::didChangeSelectionOrOverflowScrollPosition):
* Source/WebKit/WebProcess/WebPage/WebPage.h:

Canonical link: https://commits.webkit.org/280653@main