LayoutTests/fast/xsl/mozilla-tests.xsl
@@ -69,7 +69,7 @@
 <!-- empty variable for named template test -->
 <xsl:variable name="dummy-param" />
 
-<!-- supress non-selected nodes-->
+<!-- suppress non-selected nodes-->
 <xsl:template match="*"/>
 
 <!-- variable tests -->
